# browser-use-playwright

./: .gitignore  README.md  browser-use-playwright  config.yml  env.example  pyproject.toml  requirements.txt  task_optimizer_prompt.txt
.cursor/rules/: README.mdc  architecture-patterns.mdc  browser-automation.mdc  coding-standards.mdc  development-workflow.mdc  project-overview.mdc  web-ui-development.mdc
contexts/examples/: dev.yml  production.yml  testing.yml
docs/: PHASE_2_EXECUTION_GUIDE.md  QUICK_TEST_GUIDE.md  README_BROWSER_USE_TEST.md  auto-conversion-feature.md  browser-use-compatibility-fix.md  browser-use-test-guide.md  development-plan.md  douban-workflow-analysis-report.md  execution-healing-fix-summary.md  execution-issue-analysis.md  phase-3-self-healing-plan.md  task-optimization-feature-plan.md  todolist.md
examples/: batch_data.json
scripts/: check_dependencies.py  create_env.py  create_sample_workflow.py  setup_azure_openai.py  start_web_ui.py  verify_setup.sh
src/cli/: main.py  record.py  run.py
src/core/: browser_use_converter.py  browser_use_executor.py  browser_use_healer.py  config.py  error_detector.py  executor.py  recorder.py  task_optimizer.py  workflow_converter.py  workflow_updater.py
src/models/: error.py  result.py  workflow.py
src/utils/: cleaner.py  logger.py  renderer.py
src/web/: app.py  template_manager.py
src/web/static/css/: bootstrap-local.min.css  custom.css
src/web/static/js/: workflow-editor.js
src/web/templates/: base.html  index.html  workflow_detail.html  workflow_edit.html
workflows/backups/: test_healing_workflow_backup_20250619_204652.json
workflows/examples/: simple_search.json  simple_search_demo.json
